# Antiswearing

./: Cargo.toml
.github/workflows/: github-actions.yaml
src/: main.rs
