[package]
name = "antiswearing"
version = "0.1.2"
edition = "2021"

[profile.release]
strip = true
panic = "abort"
codegen-units = 1
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
walkdir = "2.4.0"
# reqwest = { version = "0.11.22", features = ["blocking"] }